--- a/src/index.css
+++ b/src/index.css
@@ -26,5 +26,25 @@ body {
 
 a {
   text-decoration: none;
-  color: #1e1e1e;
+  color: var(--primary-text-color);
+}
+
+:root {
+  --background-color: #f6f6f6;
+  --foreground-color: #003cff;
+  --primary-text-color: #0a0a0a;
+  --secondary-text-color: #C7C7C7;
+  --toggle-bg: #f0eb9d;
+  --toggle-fg: #ffd000;
+  --hover-color: #00a6ff;
+}
+
+[ data-theme="dark"] {
+  --background-color: #050c19;
+  --foreground-color: #567aff;
+  --primary-text-color: #C7C7C7;
+  --secondary-text-color: #0a0a0a;
+  --toggle-bg: #283452;
+  --toggle-fg: #00a6ff;
+  --hover-color: #ffe3b9;
 }
